# duckops

./: .flake8  .pre-commit-config.yaml  Makefile  README.md  about.html  cases.html  design.html  pyproject.toml  search.json  signatures.qmd  styles.css
.github/workflows/: ci.yml  code-checks.yml
api/: agg.any_value.html  agg.approx_count_distinct.html  agg.approx_quantile.html  agg.arg_max.html  agg.arg_min.html  agg.avg.html  agg.bit_and.html  agg.bit_or.html  agg.bit_xor.html  agg.bool_and.html  agg.bool_or.html  agg.corr.html  agg.count.html  agg.covar_pop.html  agg.entropy.html  agg.favg.html  agg.first.html  agg.fsum.html  agg.histogram.html  agg.kurtosis.html  agg.last.html  agg.list.html  agg.mad.html  agg.max.html  agg.median.html  agg.min.html  agg.mode.html  agg.product.html  agg.quantile_cont.html  agg.quantile_disc.html  agg.regr_avgx.html  agg.regr_avgy.html  agg.regr_count.html  agg.regr_intercept.html  agg.regr_r2.html  agg.regr_slope.html  agg.regr_sxx.html  agg.regr_sxy.html  agg.regr_syy.html  agg.reservoir_quantile.html  (+300 more)
docs/: _quarto.yml
docs/api/: _sidebar.yml  agg.any_value.qmd  agg.approx_count_distinct.qmd  agg.approx_quantile.qmd  agg.arg_max.qmd  agg.arg_min.qmd  agg.avg.qmd  agg.bit_and.qmd  agg.bit_or.qmd  agg.bit_xor.qmd  agg.bool_and.qmd  agg.bool_or.qmd  agg.corr.qmd  agg.count.qmd  agg.covar_pop.qmd  agg.entropy.qmd  agg.favg.qmd  agg.first.qmd  agg.fsum.qmd  agg.histogram.qmd  agg.kurtosis.qmd  (+320 more)
duckops/: __init__.py  _core.py  _overloads.py  _sqla_patch.py  _type_backends.py  _types.py  agg.py  all.py  blob.py  dt.py  helpers.py  json.py  nested.py  num.py  proto.py  prototypes.py  str.py  syntax.py  unknown.py  util.py  win.py
get-started/: advanced-programming.html  basic-datetime.html  basic-nested.html  basic-types.html  challenges.html  overview.html
(+24 files in other folders)
